resolved collapse panel console warngin with nested <a> tags

--- a/client/src/stylesheets/components/_collapsePanel.scss
+++ b/client/src/stylesheets/components/_collapsePanel.scss
@@ -10,6 +10,7 @@
 
   .collapse-panel-title {
     font-size: 20px;
+    color: $mainwhite;
     a {
       color: $mainwhite;
       text-decoration: none;
